src/objects/Recall_Approval__e.object
<CustomObject>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recall_User_Name__c</fullName>
        <label>Recall User Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordId__c</fullName>
        <description>BNF/ MIBNF record Id</description>
        <label>RecordId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Recall Approval</label>
    <pluralLabel>Recall Approvals</pluralLabel>
	<description>ESPSFDCQI-17407,ESPSFDCQI-17466</description>
</CustomObject>